# MSXPi

./: .gitignore  LICENSE  NFS.ASM  QuickStart.txt  README.compatibility.md  README.md  README_THIS_BRANCH_INFO  Release_Notes  gitupdate.sh  rm  hardware:CPLD\ Project:MSXInterface.vhd
documents/: .~lock.MSX Pi Interface 0.8.2.pdf#  .~lock.MSX Pi Interface 1.0_20200718.odt#  .~lock.MSX Pi Interface 1.1 User and Reference Guide (Working in progress_20230402.odt#  .~lock.MSX Pi Interface 1.1 User and Reference Guide (old).odt#  .~lock.MSX Pi Interface 1.1_20230402.odt#  .~lock.MSXPi Users and Developers Guide.odt#  .~lock.MSXPi Users and Developers Guide.pdf#  Fabrication_Instructions.txt  MSX Pi Interface 1.0_20200718.odt  MSX Pi Interface 1.1 User and Reference Guide (Working in progress_20230402.odt  MSX Pi Interface 1.1 User and Reference Guide (old).odt  MSX Pi Interface 1.1_20230402.odt  MSXPi Assembly Instructions.txt  MSXPi Users and Developers G.textClipping  MSXPi Users and Developers Guide.odt  Quick Start.odt  README  README.compatibility.md  README.install  assembly instrucrions.txt  assembly instructions.txt  parts.txt
hardware/: PARTS.xlsx  parts.txt
software/: ALESTE.ROM  MSXPi.xml  MSXPi.xml.template  build  call  dsktool.py  gitrecover.sh  gitupdate.sh  mgear2.orig  msxpiboot.dsk  msxpitools.dsk  orig.rom  rom.asm  test  test.asm  test.py
software/Server/C/src/: .gitignore  Makefile.am  This Is Discontinued.txt  bufrecv.c  bufsend.c  configure.ac  msxpi-server.c  msxpi-server.c.1  ploadbin.c  ptest.c  secsenddata.c  senddatablock.c  uploaddata.c
(+586 files in other folders)
